--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -30,4 +30,11 @@
     </style>
 
     <style name="Theme.DiceApp" parent="Base.Theme.DiceApp" />
+
+    <style name="Theme.TelaDeCarreagamento" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher</item>
+        <item name="windowSplashScreenIconBackgroundColor">@color/design_default_color_on_primary</item>
+        <item name="postSplashScreenTheme">@style/Base.Theme.DiceApp</item>
+    </style>
+
 </resources>
